--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(imu_utils)
 
-## Compile as C++11, supported in ROS Kinetic and newer
+## Compile as C++11, supported in ROS noetic and newer
 set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS "-std=c++11")
-#-DEIGEN_USE_MKL_ALL")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g -fPIC")
+set(CMAKE_CXX_FLAGS "-std=c++14")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g -fPIC -fopenmp")
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -15,21 +14,53 @@ find_package(catkin REQUIRED
     std_msgs
     geometry_msgs
     nav_msgs
-    code_utils
     )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 find_package(OpenCV REQUIRED)
 find_package(Ceres REQUIRED)
-find_package(Eigen3  REQUIRED)
+find_package(Eigen3 REQUIRED)
 include_directories(
-  ${catkin_INCLUDE_DIRS}
-  ${CERES_INCLUDE_DIRS}
-  ${EIGEN3_INCLUDE_DIR}
+        include
+        include/imu_utils
+        include/imu_utils/cv_utils
+        include/imu_utils/cv_utils/dlt
+        include/imu_utils/cv_utils/pnp
+        include/imu_utils/math_utils
+        include/imu_utils/sys_utils
+        ${catkin_INCLUDE_DIRS}
+        ${EIGEN3_INCLUDE_DIR}
 )
 
-catkin_package()
+catkin_package(
+        INCLUDE_DIRS include
+        LIBRARIES polynomial cv_utils pnp
+        CATKIN_DEPENDS roscpp std_msgs
+        #    DEPENDS system_lib
+)
+
+add_library(polynomial SHARED
+        src/math_utils/Polynomial.cpp)
+target_link_libraries(polynomial ${Boost_LIBRARIES} )
+
+add_library(pnp SHARED
+        src/cv_utils/dlt/dlt.cpp
+        src/cv_utils/pnp/pnp.cpp
+        src/cv_utils/pnp/linearpnp.cpp
+        src/cv_utils/pnp/nonlinearpnp.cpp)
+target_link_libraries(pnp ${Boost_LIBRARIES}  ${OpenCV_LIBS}  ${CERES_LIBRARIES})
+
+add_library(cv_utils SHARED
+        src/cv_utils.cc
+        )
+target_link_libraries(cv_utils ${Boost_LIBRARIES}  ${OpenCV_LIBS} )
+
+add_executable(matIO_test   src/mat_io_test.cpp )
+target_link_libraries(matIO_test dw ${OpenCV_LIBS})
+
+add_executable(sumpixel_test   src/sumpixel_test.cpp )
+target_link_libraries(sumpixel_test dw ${OpenCV_LIBS})
 
 set(ACC_LIB_SOURCE_FILES
     ${PROJECT_SOURCE_DIR}/src/acc_lib/allan_acc.cpp
